# python-command-line-best-practices

./: LICENSE  README.md  pyproject.toml  requirements.txt
mdhtml/: __init__.py
